# Bezier

./: CMakeLists.txt  README.md
include/: bezier.h  matplotlibcpp.h  rover_trajectory.h
src/: bezier.cpp  bezier_util.cpp  bezier_waypoint_optimization.cpp  harmonic_example.cpp  optimization.cpp  rover_trajectory.cpp  trajectory_bezier_waypoint_optimization.cpp  util.cpp  util.h  waypoint_optimization.cpp
tests/: basic_curve_test.cpp  bezier_calculator.py  binomial_test.cpp  derivative_curve_test.cpp  interpolation_test.cpp  rover_trajectory_test.cpp  visualization.cpp
